# idendrogram-streamlit

./: MANIFEST.in  README.md  pyproject.toml  setup.py
demo/: idendrogram-demo.py
demo/data/: ideal_signal.npy  network_clusters.npy  sparse_matrix.npy
demo/pages/: signal-clustering.py
idendro-streamlit/: __init__.py
idendro_streamlit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
idendrogram_streamlit_component/: __init__.py
idendrogram_streamlit_component/frontend/: package-lock.json  package.json
idendrogram_streamlit_component/frontend/src/: index.tsx
