[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "idendrogram-streamlit-component"
authors = [
  { name = "Aurimas Racas"},
]
keywords = ['dendrogram', 'hierarchical clustering', 'clustering', 'streamlit', 'D3']
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "streamlit >= 1.0",  
]
dynamic = ["version", "description"]

[project.optional-dependencies]
full = ["idendrogram"]

[project.urls]
"Home" = "https://github.com/kamicollo/idendrogram-streamlit"
"Documentation" = "https://github.com/kamicollo/idendrogram-streamlit"

[tool.flit.sdist]
exclude = ["docs/", ".vscode/", "mkdocs.yml", ".ipynb_checkpoints", ".mypy_cache"]